# markdown-toc-cli

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg  tox.ini
.github/workflows/: main.yml
markdown_toc/: markdown_toc.py
markdown_toc_cli/: markdown_toc_cli.py
