[metadata]
name = markdown_toc
version = attr: markdown_toc.markdown_toc.VERSION
description = Generate or insert a table of contents for a Markdown file.
long_description = file: README.md
long_description_content_type = text/markdown
author = Noah Pendleton
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
download_url = https://github.com/noahp/markdown-toc-py
project_urls =
    code = https://github.com/noahp/markdown-toc-py

[options]
packages = markdown_toc
install_requires =
    mistletoe==0.8.2
python_requires = >=3.6

[options.entry_points]
console_scripts =
    markdown-toc-py = markdown_toc.markdown_toc:main
